--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIoDQ7tJmcSBRQLDYRLdl+",
+      "authorship_tag": "ABX9TyNOzdBGg4+61XhfSu9/T27f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,34 +30,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "ZClzAODmt-JT",
-        "outputId": "bd23cfa9-38c9-40eb-8aa2-2df5fd2f30fb"
+        "id": "ZClzAODmt-JT"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (ipython-input-2089713303.py, line 10)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-2089713303.py\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    if month_name =='january','march','may','july','august','october','december':\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "principle_amt = int(input(\"enter the principle:\"))\n",
         "rate_of_intrest = int(input(\"enter the rate of intrest(monthly) in % :\"))\n",
         "month_name = input(\"enter the name of month:\")\n",
-        "# month_list1 = ['january','march','may','july','august','october','december']\n",
+        "month_list1 = ['january','march','may','july','august','october','december']\n",
         "month_list2 =['april','june','september','november']\n",
         "time = int(input(\"enter the time in monnths:\"))\n",
         "days= int(input(\"enter the number of days:\"))\n",
+        "year = int(input(\"enter the year:\"))\n",
         "\n",
         "\n",
-        "if month_name in in:\n",
+        "\n",
+        "if month_name in month_list1 :\n",
         "  if(days ==0):\n",
         "    SI = principle_amt * rate_of_intrest *time /100\n",
         "    print(f\"simple intrest:{SI}\")\n",
@@ -77,15 +65,23 @@
         "    SI = principle_amt * rate_of_intrest * time/100\n",
         "    print(f\"simple intrest :{SI}\")\n",
         "\n",
-        "elif month_name ==\"feburary\":\n",
-        "   if(days ==0):\n",
-        "    SI = principle_amt * rate_of_intrest *time /100\n",
-        "    print(f\"simple intrest:{SI}\")\n",
-        "   else:\n",
-        "    day_to_month = days/29\n",
-        "    time += day_to_month\n",
-        "    SI = principle_amt * rate_of_intrest * time/100\n",
-        "    print(f\"simple intrest :{SI}\")\n",
+        "elif month_name ==\"february\":\n",
+        "\n",
+        "  if year%4==0 or year%100==0 or year%400==0:\n",
+        "    if days == 0:\n",
+        "      SI = principle_amt * rate_of_intrest *time /100\n",
+        "      print(f\"simple intrest:{SI}\")\n",
+        "    else:\n",
+        "      day_to_month =time+ days/29\n",
+        "\n",
+        "      SI = principle_amt * day_to_month * rate_of_intrest/100\n",
+        "      print(f\"Simple Intrest:{SI}\")\n",
+        "  else:\n",
+        "    day_to_month = days/28\n",
+        "    time+= day_to_month\n",
+        "    SI = principle_amt * day_to_month * rate_of_intrest/100\n",
+        "    print(f\"Simple Intrest:{SI}\")\n",
+        "\n",
         "\n",
         "else :\n",
         "  print(\"enter valid amount or retry :(\")\n",
