--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPS5cEpIESiWCTcutcfi3/",
+      "authorship_tag": "ABX9TyO7HlHJgCUksqfTZAdaETvd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "ZClzAODmt-JT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZClzAODmt-JT",
+        "outputId": "6bacf847-ee9c-469e-9b65-969292164bdf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the principle:2000\n",
+            "enter the rate of intrest(monthly) in % :2\n",
+            "enter the name of month:feb\n",
+            "enter the time in monnths:2\n",
+            "enter the number of days:11\n",
+            "enter the year:2025\n",
+            "Simple Intrest: 95.71428571428571\n"
+          ]
+        }
+      ],
       "source": [
         "principle_amt = int(input(\"enter the principle:\"))\n",
         "rate_of_intrest = int(input(\"enter the rate of intrest(monthly) in % :\"))\n",
@@ -46,49 +64,43 @@
         "\n",
         "\n",
         "if month_name in month_list1 :\n",
-        "  if(days ==0):\n",
-        "    SI = principle_amt * rate_of_intrest *time /100\n",
-        "    print(f\"simple intrest:{SI}\")\n",
-        "  else:\n",
-        "    day_to_month = days/31\n",
-        "    time += day_to_month\n",
-        "    SI = principle_amt * rate_of_intrest * time/100\n",
-        "    print(f\"simple intrest :{SI}\")\n",
+        "\n",
+        "  day_to_month =time + days/31\n",
+        "\n",
+        "\n",
         "elif month_name in month_list2:\n",
         "\n",
-        "   if(days ==0):\n",
-        "    SI = principle_amt * rate_of_intrest *time /100\n",
-        "    print(f\"simple intrest:{SI}\")\n",
-        "   else:\n",
-        "    day_to_month = days/30\n",
-        "    time += day_to_month\n",
-        "    SI = principle_amt * rate_of_intrest * time/100\n",
-        "    print(f\"simple intrest :{SI}\")\n",
+        "\n",
+        "  day_to_month = time + days/30\n",
         "\n",
         "elif month_name ==\"feb\":\n",
         "\n",
         "  if year%4==0 or year%100==0 or year%400==0:\n",
-        "    if days == 0:\n",
-        "      SI = principle_amt * rate_of_intrest *time /100\n",
-        "      print(f\"simple intrest:{SI}\")\n",
-        "    else:\n",
+        "\n",
         "      day_to_month =time+ days/29\n",
-        "\n",
-        "      SI = principle_amt * day_to_month * rate_of_intrest/100\n",
-        "      print(f\"Simple Intrest:{SI}\")\n",
         "  else:\n",
-        "    day_to_month = days/28\n",
-        "    time+= day_to_month\n",
-        "    SI = principle_amt * day_to_month * rate_of_intrest/100\n",
-        "    print(f\"Simple Intrest:{SI}\")\n",
-        "\n",
+        "    day_to_month = time+days/28\n",
         "\n",
         "else :\n",
         "  print(\"enter valid amount or retry :(\")\n",
         "\n",
+        "SI = principle_amt *rate_of_intrest*day_to_month/ 100\n",
+        "amount = SI + principle_amt\n",
+        "print(f\"Simple Intrest: {SI}\")\n",
+        "print(f\" Amounnt {SI} + {principle_amt} = {amount}\")\n",
+        "\n",
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uLz19f7F7w6u"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
