--- a/Untitled9.ipynb
+++ b/Untitled9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCEcMeyTHLKwFxpAx3hkR/",
+      "authorship_tag": "ABX9TyMAtRgZGLURlzcTRokQzjUz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,38 +145,33 @@
         "\n",
         "\n",
         "\n",
-        "a = int(input('enter the first number:'))\n",
-        "a2 = int(input('enter the second number:'))\n",
-        "n = int (input('enter the last number:'))\n",
-        "d = a2-a\n",
+        "# a = int(input('enter the first number:'))\n",
+        "# a2 = int(input('enter the second number:'))\n",
+        "# n = int (input('enter the last number:'))\n",
+        "# d = a2-a\n",
         "\n",
-        "an =a + (n-1)*d\n",
-        "print(an)\n",
+        "# an =a + (n-1)*d\n",
+        "# print(an)\n",
         "sum= 0\n",
-        "for i in range (3 , an ,4):\n",
+        "for i in range (1 , 1002 ,5):\n",
         "  sum+=i\n",
         "\n",
-        "print(sum)\n",
-        ""
+        "print(sum)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kMofRS5eLMb9",
-        "outputId": "38bc8014-4d13-482c-9b2a-1db8dc57d434"
+        "outputId": "b55992cf-b4c4-4dfe-ffc6-9809bc082de2"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter the first number:3\n",
-            "enter the second number:7\n",
-            "enter the last number:159\n",
-            "635\n",
-            "50086\n"
+            "100701\n"
           ]
         }
       ]
