--- a/Untitled9.ipynb
+++ b/Untitled9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAtRgZGLURlzcTRokQzjUz",
+      "authorship_tag": "ABX9TyNC7bWWJMnJj3dJ2p+3/Dtx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,29 +152,56 @@
         "\n",
         "# an =a + (n-1)*d\n",
         "# print(an)\n",
-        "sum= 0\n",
-        "for i in range (1 , 1002 ,5):\n",
-        "  sum+=i\n",
         "\n",
-        "print(sum)\n"
+        "# user_input =int(input(\"enter a number for factorial:\"))\n",
+        "# factorial= 1\n",
+        "# for i in range (1 , user_input+1 ):\n",
+        "#   factorial = factorial*i\n",
+        "\n",
+        "# print(factorial)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# a, b = 10,5\n",
+        "# a = a+b\n",
+        "# b= a-b\n",
+        "# print(a,b)\n",
+        "# n = int(input(\"enter the number:\"))\n",
+        "# first_term = 0\n",
+        "# second_term = 1\n",
+        "# print(first_term)\n",
+        "# print(second_term)\n",
+        "# for i in range(2,n):\n",
+        "#   third_term = first_term+second_term\n",
+        "#   first_term = second_term\n",
+        "#   second_term = third_term\n",
+        "#   print(third_term )\n",
+        "\n",
+        "\n",
+        "user_input =int(input(\"enter the number of input:\"))\n",
+        "\n",
+        "\n",
+        "\n",
+        "factorial= 1\n",
+        "sum = 0\n",
+        "\n",
+        "\n",
+        "for i in range (1,user_input+1):\n",
+        "  factorial = factorial*i\n",
+        "  sum += factorial\n",
+        "\n",
+        "print(f\"factorial :{factorial}\")\n",
+        "print(f\"sum:{sum}\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kMofRS5eLMb9",
-        "outputId": "b55992cf-b4c4-4dfe-ffc6-9809bc082de2"
+        "id": "kMofRS5eLMb9"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "100701\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
