--- a/Untitled9.ipynb
+++ b/Untitled9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC7bWWJMnJj3dJ2p+3/Dtx",
+      "authorship_tag": "ABX9TyMZH91OtyU6Jw12TncSb9PM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,31 +30,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "eZPbVctsOEQ0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "96034218-16ce-482b-b84d-6614a75541b4"
+        "id": "eZPbVctsOEQ0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "directions to open: \n",
-            "Si:south in \n",
-            "wi:west in \n",
-            "ei:east in \n",
-            "ni:north in \n",
-            "\n",
-            "enter the direction:si\n",
-            "enter the direction you want to go:so\n",
-            "vehicles for eastOut side  is stop\n",
-            "nortIn  lights green\n",
-            "eastIn lights red\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# print(\n",
         "#     'directions to open: \\n'\n",
@@ -178,30 +156,61 @@
         "#   print(third_term )\n",
         "\n",
         "\n",
-        "user_input =int(input(\"enter the number of input:\"))\n",
+        "# user_input =int(input(\"enter the number of input:\"))\n",
         "\n",
         "\n",
         "\n",
-        "factorial= 1\n",
+        "# factorial= 1\n",
+        "# sum = 0\n",
+        "\n",
+        "\n",
+        "# for i in range (1,user_input+1):\n",
+        "#   factorial = factorial*i\n",
+        "#   sum += factorial\n",
+        "\n",
+        "# print(f\"factorial :{factorial}\")\n",
+        "# print(f\"sum:{sum}\")\n",
+        "\n",
+        "# reverse=0\n",
+        "# n = 4552\n",
+        "# sum = 0\n",
+        "# while n>0:\n",
+        "#   digit = n%10\n",
+        "#   sum += digit\n",
+        "#   reverse=reverse*10+digit\n",
+        "\n",
+        "#   n = int(n/10)\n",
+        "\n",
+        "# print(f'{sum}')\n",
+        "# print(n)\n",
+        "# print(reverse)\n",
+        "\n",
         "sum = 0\n",
-        "\n",
-        "\n",
-        "for i in range (1,user_input+1):\n",
-        "  factorial = factorial*i\n",
-        "  sum += factorial\n",
-        "\n",
-        "print(f\"factorial :{factorial}\")\n",
-        "print(f\"sum:{sum}\")\n",
-        "\n",
+        "for i in range (1,100+1):\n",
+        "  sqr = i*i\n",
+        "  sum += sqr\n",
+        "print(sum)\n",
         "\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "kMofRS5eLMb9"
+        "id": "kMofRS5eLMb9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a99f8b1-e690-4af9-eb92-b080543aa590"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "338350\n"
+          ]
+        }
+      ]
     }
   ]
 }
