--- a/Untitled9.ipynb
+++ b/Untitled9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZH91OtyU6Jw12TncSb9PM",
+      "authorship_tag": "ABX9TyNNk6z3hl7TCm05W8p5EH2Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "# print(\n",
         "#     'directions to open: \\n'\n",
-        "#     'Si:south in \\n'\n",
+        "#     'Si:south in \\n'-\n",
         "#     'wi:west in \\n'\n",
         "#     'ei:east in \\n'\n",
         "#     'ni:north in \\n'\n",
@@ -106,14 +106,13 @@
         "\n",
         "\n",
         "# else:\n",
-        "#   print(\"enter right direction. please!\")\n",
-        "\n",
-        "\n"
+        "#   print(\"enter right direction. please!\")"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "#1+2+3+4+5+............................998+999+1000\n",
         "# n = int(input(\"enter the  last number:\"))\n",
         "# a = int(input(\"enter the first number:\"))\n",
@@ -171,27 +170,480 @@
         "# print(f\"factorial :{factorial}\")\n",
         "# print(f\"sum:{sum}\")\n",
         "\n",
+        "\n",
+        "# n = int(input(\"enter the number to check palindromme:\"))\n",
         "# reverse=0\n",
-        "# n = 4552\n",
-        "# sum = 0\n",
+        "# user_input =n\n",
         "# while n>0:\n",
+        "\n",
         "#   digit = n%10\n",
-        "#   sum += digit\n",
-        "#   reverse=reverse*10+digit\n",
-        "\n",
         "#   n = int(n/10)\n",
+        "#   reverse=reverse*10+digit\n",
+        "# if reverse == user_input:\n",
+        "#   print(f\"{reverse} is palindrome\")\n",
+        "# else:\n",
+        "#   print(\"not a palindrome\")\n",
         "\n",
-        "# print(f'{sum}')\n",
-        "# print(n)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# sum = 0\n",
+        "# for i in range (1,100+1,):\n",
+        "#   sqr = i*i\n",
+        "#   sum += sqr\n",
+        "# print(sum)\n",
+        "# n = int(input(\"enter the number for prime number:\"))\n",
+        "# for num in range(2, n):\n",
+        "\n",
+        "#   for i in range(2,num):\n",
+        "\n",
+        "\n",
+        "#     if num%i ==0:\n",
+        "#       break\n",
+        "#   else:\n",
+        "#     print(num)\n",
+        "\n",
+        "\n",
+        "# for num in range(2,n):\n",
+        "#   if n==2:\n",
+        "\n",
+        "\n",
+        "# n = int(input(\"enter the number :\"))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# user_input= input('enter a word to check palindrome:')\n",
+        "# palindrom = \"\"\n",
+        "# for i in user_input:\n",
+        "#    palindrom = i+palindrom\n",
+        "\n",
+        "\n",
+        "# if palindrom == user_input:\n",
+        "#   print(f\"{palindrom} is palindrom\")\n",
+        "# else:\n",
+        "#   print(f\"{palindrom} not a palindrom\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def addition(n):\n",
+        "#     count =0\n",
+        "#     for i in range(n):\n",
+        "#         count +=i\n",
+        "\n",
+        "#     return count\n",
+        "\n",
+        "\n",
+        "# print(addition(10))\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def numberCheck(n):\n",
+        "#     for i in range(n):\n",
+        "#         if i%2!=0:\n",
+        "#             print(f\"{i} is a odd number\")\n",
+        "#         else:\n",
+        "#             print(f\"{i} is even number\")\n",
+        "\n",
+        "# # numberCheck(10)\n",
+        "\n",
+        "# # def numCheck(j):\n",
+        "\n",
+        "# #     if j%2!=0:\n",
+        "# #         print(f\"{j} is a odd number\")\n",
+        "# #     else:\n",
+        "# #         print(f\"{j} is even number\")\n",
+        "\n",
+        "# # numCheck(2)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def fibonnaci(n):\n",
+        "#     first_term = 0\n",
+        "#     second_term = 1\n",
+        "#     print(first_term)\n",
+        "#     print(second_term)\n",
+        "#     for i in range(2,n):\n",
+        "#         third_term = first_term+second_term\n",
+        "#         first_term = second_term\n",
+        "#         second_term = third_term\n",
+        "#         print(third_term )\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# fibonnaci(10)\n",
+        "\n",
+        "\n",
+        "# def factorial(n):\n",
+        "#     factorial = 1\n",
+        "#     for i in range (1,n):\n",
+        "#         factorial = factorial*i\n",
+        "#         print(factorial)\n",
+        "\n",
+        "# factorial(5)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def prime_number(n):\n",
+        "#   for i in range(2,n):\n",
+        "#     for j in range(2,i):\n",
+        "#         if i%j==0:\n",
+        "#             break\n",
+        "#     else:\n",
+        "#       print(i)\n",
+        "\n",
+        "\n",
+        "# prime_number(10)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def sum_of_fact(n):\n",
+        "\n",
+        "#   sum = 0\n",
+        "#   for i in range (1,n+1,2):\n",
+        "#     factorial = 1\n",
+        "#     for j in range(1,i+1):\n",
+        "\n",
+        "\n",
+        "#       factorial = j*factorial\n",
+        "#     sum += factorial\n",
+        "\n",
+        "#     print(factorial)\n",
+        "#     print(sum)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# print(sum_of_fact(5))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def add(*args):\n",
+        "#   sum = 0\n",
+        "#   for i in args:\n",
+        "#     sum +=i\n",
+        "\n",
+        "#   print(sum)\n",
+        "\n",
+        "\n",
+        "# add(2,3,4,5)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def values(**kwargs):\n",
+        "#   return kwargs\n",
+        "\n",
+        "# values(name='rahul', surname= 'rawat')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def key_values(**kwargs):\n",
+        "#   for key, value in kwargs.items():\n",
+        "#     print(f\" {value}\")\n",
+        "\n",
+        "\n",
+        "# key_values(name=\"rahul\", surname= 'rawat')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# a = lambda x :x*x\n",
+        "\n",
+        "# print(a(5))\n",
+        "# def sum_of_fact(n):\n",
+        "#   sum = 0\n",
+        "#   fact =1\n",
+        "#   for i in range(1,n+1):\n",
+        "#     fact = fact*i\n",
+        "#     if i%2!=0:\n",
+        "#       sum += fact\n",
+        "#   print(sum)\n",
+        "\n",
+        "# sum_of_fact(5)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def sumOffact(n):\n",
+        "#   sum = 0\n",
+        "#   for i in range(1,n+1,4):\n",
+        "#     fact= 1\n",
+        "#     for i in range(1,i+1):\n",
+        "#       fact = i*fact\n",
+        "#       # print(fact)\n",
+        "#     sum += fact\n",
+        "#     print(sum)\n",
+        "\n",
+        "\n",
+        "# sumOffact(5)\n",
+        "\n",
+        "\n",
+        "# def fact_sum(n):\n",
+        "#   sum = 0\n",
+        "#   fact =1\n",
+        "#   for i in range (1,n+1):\n",
+        "#     fact = fact*i\n",
+        "\n",
+        "#     if (i)%4==1:\n",
+        "#      sum+=fact\n",
+        "#   print(sum)\n",
+        "#   print(fact)\n",
+        "\n",
+        "# fact_sum(13)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# num = 2344\n",
+        "# reverse = 0\n",
+        "# while num>0:\n",
+        "#   digit = num%10\n",
+        "#   reverse +=digit\n",
+        "#   num = num//10\n",
         "# print(reverse)\n",
         "\n",
-        "sum = 0\n",
-        "for i in range (1,100+1):\n",
-        "  sqr = i*i\n",
-        "  sum += sqr\n",
-        "print(sum)\n",
+        "\n",
+        "# def fibonacci(n):\n",
+        "#   first_digit = 0\n",
+        "#   second_digit =1\n",
+        "#   print(first_digit, second_digit)\n",
+        "#   third_digit=0\n",
+        "#   for i in range(2,n+1):\n",
+        "#     third_digit = first_digit+second_digit\n",
+        "#     first_digit = second_digit\n",
+        "#     second_digit = third_digit\n",
+        "#     print(third_digit)\n",
+        "# fibonacci(10)\n",
+        "\n",
+        "# def factorial_sum(n):\n",
+        "#   sum = 0\n",
+        "#   fact = 1\n",
+        "#   for i in range(1,n+1):\n",
+        "#     fact = fact*i\n",
+        "#     if i%2!=0:\n",
+        "#       sum += fact\n",
+        "\n",
+        "#   print(sum)\n",
+        "# factorial_sum(7)\n",
         "\n",
         "\n",
+        "\n",
+        "\n",
+        "# user_gen = input('enter your gender(men , women   ):-')\n",
+        "# user_weight= int(input(\"enter your weight(kg):-\"))\n",
+        "# user_height = int(input(\"enter your height(cm):-\"))\n",
+        "# user_age= int(input(\"enter your age:-\"))\n",
+        "\n",
+        "# if user_gen =='men':\n",
+        "#   bmr = (10 * user_weight)+ (6.25 * user_height) - (5 * user_age) +5\n",
+        "#   print(bmr)\n",
+        "\n",
+        "# elif user_gen == \"women\":\n",
+        "#   bmr = (10 * user_weight)+(6.25*user_height)-(5*user_age)-161\n",
+        "\n",
+        "#   print(bmr)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# a= 10\n",
+        "# b=15\n",
+        "# if a<b:\n",
+        "#   num =a\n",
+        "# else:\n",
+        "#   num = b\n",
+        "\n",
+        "# for i in range(1,num+1):\n",
+        "#   if a%i==0 and b%i==0:\n",
+        "#     hcf =i\n",
+        "# print(f\"hcf:-{hcf}\")\n",
+        "\n",
+        "# Lcm = a * b/hcf\n",
+        "# print(f'lcm:-{Lcm}')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# num1= int(input('enter your number:-'))\n",
+        "# num2= int(input('enter your number:-'))\n",
+        "\n",
+        "\n",
+        "# if num1>num2:\n",
+        "#   greatnumber = num1\n",
+        "# else:\n",
+        "#   greatnumber = num2\n",
+        "\n",
+        "\n",
+        "# for i in range (greatnumber, num1*num2+1):\n",
+        "#   if i%num1 == 0 and i%num2 ==0:\n",
+        "#     lcm =i\n",
+        "#     break\n",
+        "#    print(lcm)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# def factorial(n):\n",
+        "#   if n==0 or n ==1:\n",
+        "#     return 1\n",
+        "#   else:\n",
+        "#     return n*factorial(n-1)\n",
+        "\n",
+        "\n",
+        "# factorial(5)\n",
+        "\n",
+        "# n= 10\n",
+        "# def fibonnaci(n):\n",
+        "#   if n==0:\n",
+        "#     return 0\n",
+        "#   elif n==1:\n",
+        "#     return  1\n",
+        "#   else:\n",
+        "#     return fibonnaci(n-1)+fibonnaci(n-2)\n",
+        "\n",
+        "\n",
+        "# for i in range (n):\n",
+        "#  print(fibonnaci(i))\n",
+        "\n",
+        "\n",
+        "# name = ' rahul singh rawat '\n",
+        "\n",
+        "# print(name.replace(\" \",\"\"))\n",
+        "\n",
+        "\n",
+        "# print(name.startswith(' '))\n",
+        "# print(name.endswith('t'))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# name = input(\"enter your name:\")\n",
+        "\n",
+        "# reverse = \"\"\n",
+        "# for char in name:\n",
+        "#   reverse = char+reverse\n",
+        "# print(reverse )\n",
+        "\n",
+        "# if reverse == name:\n",
+        "#   print(f\"{reverse} is palindrome\")\n",
+        "# else:\n",
+        "#   print('no a palindrome')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# name = \"pqpqppppp\"\n",
+        "# count = 0\n",
+        "# for char in name:\n",
+        "#   if char =='p':\n",
+        "#     count +=1\n",
+        "\n",
+        "# print(count)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# n= int(input('enter the number :-'))\n",
+        "# count= 0\n",
+        "# sum = 0\n",
+        "# for num in range(n+1):\n",
+        "#   sum+=num\n",
+        "\n",
+        "#   if num%2==0 or num%3==0 or num%5==0:\n",
+        "#     count +=num\n",
+        "\n",
+        "\n",
+        "# print(sum-count)\n",
+        "\n",
+        "# a= [1,2,3,5]\n",
+        "# print(a[:-2])\n",
+        "\n",
+        "# no_of_item = int(input(\"enter your amount:\"))\n",
+        "# discount=[]\n",
+        "# discount_price = []\n",
+        "# total_bill =0\n",
+        "\n",
+        "# amount = []\n",
+        "# item = []\n",
+        "# price = 0\n",
+        "# for i in range(no_of_item):\n",
+        "\n",
+        "#   item_name = input(f\"enter your item name {i+1}:\")\n",
+        "#   item.append(item_name)\n",
+        "#   price  = int(input(f'enter you item price {i+1}:  '))\n",
+        "#   amount.append(price)\n",
+        "#   discounts  = int(input(f'enter you item discount {i+1}:  '))\n",
+        "#   discount.append(discounts)\n",
+        "#   discount_prices = price * discounts/100\n",
+        "#   prices = price - discount_prices\n",
+        "#   discount_price.append(prices)\n",
+        "#   total_bill += prices\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# print(total_bill)\n",
+        "# print(item)\n",
+        "\n",
+        "# print(discount_price)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# no_of_item = int(input(\"enter your amount:\"))\n",
+        "# discount=[]\n",
+        "# discount_price = []\n",
+        "# total_bill =0\n",
+        "\n",
+        "# amount = []\n",
+        "# item = []\n",
+        "# price = 0\n",
+        "# for i in range(no_of_item):\n",
+        "\n",
+        "#   item_name = input(f\"enter your item name {i+1}:\")\n",
+        "#   item.append(item_name)\n",
+        "#   price  = int(input(f'enter you item price {i+1}:  '))\n",
+        "#   amount.append(price)\n",
+        "#   discounts  = int(input(f'enter you item discount {i+1}:  '))\n",
+        "#   discount.append(discounts)\n",
+        "#   discount_prices = price * discounts/100\n",
+        "#   prices = price - discount_prices\n",
+        "#   discount_price.append(prices)\n",
+        "#   total_bill += prices\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# bill_pay = total_bill *15/100\n",
+        "# bill = total_bill-bill_pay\n",
+        "# coupon_name = input('enter your coupon number:-')\n",
+        "# if coupon_name =='chkfir29':\n",
+        "#   coupon_amt = bill * 29/100\n",
+        "#   bill = bill -coupon_amt\n",
+        "#   print(f\"amount with coupon number :- {bill}\")\n",
+        "# else:\n",
+        "#   print(bill)\n",
+        "# print(f\"total bill after 15% discount:-{bill}\")\n",
+        "# print(f\"bill before discount:-  {total_bill}\")\n",
+        "# print(item)\n",
+        "\n",
+        "# print(discount_price)\n",
+        "\n",
+        "a=[1,2,3,4,5,6]\n",
+        "print(a[1:])\n",
+        "print\n",
         "\n"
       ],
       "metadata": {
@@ -199,18 +651,56 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a99f8b1-e690-4af9-eb92-b080543aa590"
+        "outputId": "ae64315a-ecca-48f7-f52e-37206a1ded5b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "338350\n"
+            "[2, 3, 4, 5, 6]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "FtZxkw--jysp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YB8FTK0H7Z5e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Na5A7pyR7K7M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "TvfuT-zQQAzZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
